--- a/packages/cwrc-leafwriter/src/css/variables.less
+++ b/packages/cwrc-leafwriter/src/css/variables.less
@@ -9,5 +9,7 @@
 @entity-note: rgb(224, 190, 0);
 @entity-date: rgb(253, 119, 170);
 @entity-correction: rgb(191, 4, 4);
+@entity-correction-sic: @entity-correction;
+@entity-correction-corr: rgb(0, 128, 0);
 @entity-keyword: rgb(16, 172, 132);
 @entity-link: rgb(70, 130, 180);
